# near-svelte-dapp-template

./: .env.defaults  .gitignore  LICENSE  README.md  index.html  package.json  svelte.config.js  tailwind.config.js  webpack.config.js
contract/: Cargo.toml
contract/src/: lib.rs
public/: index.html
src/: App.svelte  index.html  main.js  store.js
src/components/: Counter.svelte  Header.svelte  Loading.svelte
